update alertClient features